# https---github.com-NatalyaNemirovskaya-PRACTICA_8_SNAKE

./: CMakeLists.txt
src/: Game_snake.cpp  Game_snake.h  Paint.cpp  Paint.h  main.cpp
